Fix tox refresh

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,10 @@
 envlist = py27, py34, py35, py36
 
 [testenv]
-deps = -rrequirements-test.txt
+deps =
+  pip-tools == 3.8.0
 
 commands =
+  pip-sync requirements-test.txt
   {envpython} -m pytest
 
