fix tox not refreshing

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
 envlist = py27, py34, py35, py36
 
+
 [testenv]
-deps =
-  pip-tools == 3.8.0
+# flawed due to https://github.com/tox-dev/tox/issues/149
+# deps = -rrequirements.txt
 
 commands =
-  pip-sync requirements-test.txt
+  # see https://github.com/tox-dev/tox/issues/149
+  pip install -r requirements-test.txt
   {envpython} -m pytest
 
