--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,14 @@ envlist = py27, py34, py35, py36
 # flawed due to https://github.com/tox-dev/tox/issues/149
 # deps = -rrequirements.txt
 
+deps =
+  py36: coala
+  py36: coala-bears
+  py36: mypy
+
 commands =
   # see https://github.com/tox-dev/tox/issues/149
   pip install -r requirements-test.txt
   {envpython} -m pytest
-
+  py36: coala
+  py36: mypy -2 cmakelint --ignore-missing-imports
