--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [aliases]
 test = pytest
+lint = coala
 
 [tool:pytest]
 python_files = *.py
 testpaths = test
-addopts = --cov-fail-under=80 --cov=cmakelint
+addopts = --cov-fail-under=84 --cov=cmakelint
