--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,6 @@ deps =
 commands =
   # see https://github.com/tox-dev/tox/issues/149
   pip install -r requirements-test.txt
-  {envpython} -m pytest
+  {envpython} setup.py test
   py36: coala
   py36: mypy -2 cmakelint --ignore-missing-imports
