NOBUG: Fix coverage requirement and running pytest with venv installed files

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,6 @@ test = pytest
 lint = coala
 
 [tool:pytest]
-python_files = *.py
+python_files = *test.py
 testpaths = test
-addopts = --cov-fail-under=93 --cov=cmakelint
+addopts = --cov-fail-under=84 --cov=./cmakelint
