NOBUG: Use py38 for coala, fix style issues

--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,12 @@ envlist = py27, py36, py37, py38, pypy3
 # deps = -rrequirements.txt
 
 deps =
-  py36: coala
-  py36: coala-bears
-  py36: mypy
+  py38: coala
+  py38: coala-bears
+  py38: mypy
 
 commands =
   # see https://github.com/tox-dev/tox/issues/149
   {envpython} setup.py test
-  py36: coala
-  py36: mypy -2 cmakelint --ignore-missing-imports
+  py38: coala --non-interactive
+  py38: mypy -2 cmakelint --ignore-missing-imports
