NOBUG: Fix CLI failure for python2.7 dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ deps =
   py38: coala
   py38: coala-bears
   py38: mypy
+  py27: importlib-metadata>=0.12
+  py27: mock<=3.0.5
 
 commands =
   # see https://github.com/tox-dev/tox/issues/149
