--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [tox]
-envlist = py27, py36, py37, py38, pypy3
+envlist = py37, py38, py39, pypy3
 
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    pypy-3.7: pypy3
 
 [testenv]
 # flawed due to https://github.com/tox-dev/tox/issues/149
@@ -17,4 +23,4 @@ commands =
   # see https://github.com/tox-dev/tox/issues/149
   {envpython} setup.py test
   py38: coala --non-interactive
-  py38: mypy -2 cmakelint --ignore-missing-imports
+  py38: mypy cmakelint --ignore-missing-imports
