--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,18 @@
 name: Test
 
 on:
-  - push
+  push:
+    branches: [main]
+  pull_request:
+  merge_group:
+  workflow_dispatch:
 
 jobs:
   build-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', 'pypy-3.7']
+        python-version: ["3.7", "3.8", "3.9", "pypy-3.7"]
 
     steps:
       - name: Checkout
@@ -20,8 +24,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-          cache: 'pip'
-          cache-dependency-path: '**/dev-requirements'
+          cache: "pip"
+          cache-dependency-path: "**/dev-requirements"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
