--- a/tox.ini
+++ b/tox.ini
@@ -25,4 +25,4 @@ commands =
   # see https://github.com/tox-dev/tox/issues/149
   {envpython} setup.py test
   py38: coala --non-interactive
-  py38: mypy -2 cmakelint --ignore-missing-imports
+  py38: mypy cmakelint --ignore-missing-imports
