Drop setup.py command usage

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,6 @@ deps =
   py27: mock<=3.0.5
 
 commands =
-  # see https://github.com/tox-dev/tox/issues/149
-  {envpython} setup.py test
+  {envpython} -m pytest
   py38: coala --non-interactive
   py38: mypy cmakelint --ignore-missing-imports
