install dev dependency

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,6 @@ python =
   pypy-3.7: pypy3
 
 [testenv]
-# flawed due to https://github.com/tox-dev/tox/issues/149
-# deps = -rrequirements.txt
 
 deps =
   py38: coala
@@ -22,6 +20,7 @@ deps =
   py27: mock<=3.0.5
 
 commands =
+  {envpython} -m pip install .[dev]
   {envpython} -m pytest
   py38: coala --non-interactive
   py38: mypy cmakelint --ignore-missing-imports
