Disable lint-stage

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,10 @@ python =
 [testenv]
 
 deps =
-  py38: coala
-  py38: coala-bears
+  ; Temporary disable lint stage, there are two many dependency conflicts between
+  ; coala and flake8 and pylint. We should replace coala, flake8 and pylint with Ruff.
+  ; py38: coala
+  ; py38: coala-bears
   py38: mypy
 
 commands =
