Disable lint command

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,6 @@ python =
 [testenv]
 
 deps =
-  ; Temporary disable lint stage, there are two many dependency conflicts between
-  ; coala and flake8 and pylint. We should replace coala, flake8 and pylint with Ruff.
   ; py38: coala
   ; py38: coala-bears
   py38: mypy
@@ -22,5 +20,7 @@ deps =
 commands =
   {envpython} -m pip install .[dev]
   {envpython} -m pytest
-  py38: coala --non-interactive
+  ; Temporary disable lint stage, there are two many dependency conflicts between
+  ; coala and flake8 and pylint. We should replace coala, flake8 and pylint with Ruff.
+  ; py38: coala --non-interactive
   py38: mypy cmakelint --ignore-missing-imports
