chore(tools): add ruff as linter

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ python =
 deps =
   ; py38: coala
   ; py38: coala-bears
+  py310: ruff
   py38: mypy
 
 commands =
@@ -25,3 +26,4 @@ commands =
   ; coala and flake8 and pylint. We should replace coala, flake8 and pylint with Ruff.
   ; py38: coala --non-interactive
   py38: mypy cmakelint --ignore-missing-imports
+  py310: ruff check .
