chore: cleanup Flake8, Pylint and coala

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, py310, py311, py312, pypy3
+envlist = py38, py39, py310, py311, py312, pypy39, pypy310
 
 [gh-actions]
 python =
@@ -14,16 +14,11 @@ python =
 [testenv]
 
 deps =
-  ; py38: coala
-  ; py38: coala-bears
   py310: ruff
   py38: mypy
 
 commands =
   {envpython} -m pip install .[dev]
   {envpython} -m pytest
-  ; Temporary disable lint stage, there are two many dependency conflicts between
-  ; coala and flake8 and pylint. We should replace coala, flake8 and pylint with Ruff.
-  ; py38: coala --non-interactive
   py38: mypy cmakelint --ignore-missing-imports
   py310: ruff check .
