fix: use prerelease instead of prepatch

--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -27,9 +27,10 @@ jobs:
           CI_COMMIT_MESSAGE: "CI: bump version" 
           CI_COMMIT_AUTHOR: Continuous Integration
         run: |
-          poetry version prepatch
+          poetry version prerelease
           git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
           git config --global user.email "33428955+StStME@users.noreply.github.com"
+          git diff
           git add pyproject.toml
           git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
           poetry version -s | xargs -I{} git tag -m "test deploy version {}" "testpypi/{}"
