--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -36,4 +36,4 @@ jobs:
           poetry version -s | xargs -I{} git tag -m "test deploy version {}" "testpypi/{}"
           git push
           poetry build
-          poetry publish -r testpypi dist/*
+          poetry publish --build -r testpypi 
