--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry
           python -m pip install -e .[dev]
           python -m pip install tox tox-gh-actions
       - name: Test with tox
