fix: tox now requires poetry

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ deps =
   py38: mypy
 
 commands =
+  {envpython} -m pip install poetry
   {envpython} -m pip install .[dev]
   {envpython} -m pytest
   py38: mypy cmakelint --ignore-missing-imports
