--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 tox = "^3.0.0"
 ruff = "^0.3.0"
+pytest = "^8.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
