fix: use poetry in tox

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
 
 commands =
   {envpython} -m pip install poetry
-  {envpython} -m pip install .[dev]
+  {envpython} -m poetry install
   {envpython} -m pytest
   py38: mypy cmakelint --ignore-missing-imports
   py310: ruff check .
